--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,6 +3,7 @@ on: [push]
 
 jobs:
   build:
+    runs-on: ubuntu-latest
     steps:
       - name: Hello Action
         uses: wxdlong/hello-action@v7
