--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -5,5 +5,6 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - name: Hello Action
-        uses: wxdlong/hello-action@v7
+      - uses: wxdlong/hello-action@v7
+        with:
+          who-to-greet: 'Jason'
