Test with env var

--- a/.github/actions/test-action/Dockerfile
+++ b/.github/actions/test-action/Dockerfile
@@ -1,4 +1,5 @@
 FROM python:3.6-alpine
 
-COPY . /app
-CMD ["python", "/github/workspace/main.py"]
+WORKDIR ${GITHUB_WORKSPACE}
+
+CMD ["python", "main.py"]
