--- a/.github/actions/test-action/Dockerfile
+++ b/.github/actions/test-action/Dockerfile
@@ -1,5 +1,5 @@
 FROM python:3.6-alpine
 
-#WORKDIR /github/workspace
+WORKDIR /github/workspace
 
-CMD ["python", "-c", "import os;print(os.environ)"]
+CMD ["python", "main.py"]
